--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng-sidebar": "^7.2.1",
     "ng2-pdf-viewer": "^5.0.1",
     "ngx-bootstrap": "^2.0.3",
+    "ngx-image-zoom": "^0.3.1",
     "ngx-soap": "^0.2.2-beta6",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
